In this commit did created the xml and class for model view of the sale

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="action_edit">Editar</string>
     <string name="action_delete">Excluir</string>
     <string name="create_sale">Criar venda</string>
+    <string name="title_activity_sale">Venda</string>
 
 </resources>
