In this commit has started the list of the sales.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="action_delete">Excluir</string>
     <string name="create_sale">Criar venda</string>
     <string name="title_activity_sale">Venda</string>
+    <string name="title_activity_sale_list">Lista de Vendas</string>
 
 </resources>
