--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">Flat</string>
     <string name="title_start">Início</string>
     <string name="title_client">Cliente</string>
-    <string name="title_section3">Section 3</string>
+    <string name="title_sales">Vendas</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
@@ -21,5 +21,6 @@
     <string name="create_sale">Criar venda</string>
     <string name="title_activity_sale">Venda</string>
     <string name="title_activity_sale_list">Lista de Vendas</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
