--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,6 @@
     <string name="title_activity_sale">Venda</string>
     <string name="title_activity_sale_list">Lista de Vendas</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_payment">PaymentActivity</string>
 
 </resources>
