--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,6 @@
     <string name="title_activity_sale_list">Lista de Vendas</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_payment">PaymentActivity</string>
+    <string name="title_activity_product">Product</string>
 
 </resources>
